src/objects/IntegrationUserAndProfile__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>APTS_IntegrationLogFandFDeletionDay__c</fullName>
        <description>Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>Integration Log F&amp;F Deletion Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AWS_Endpoint__c</fullName>
        <label>AWS Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Password__c</fullName>
        <label>AWS Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Username__c</fullName>
        <label>AWS Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Deletion_Day__c</fullName>
        <label>All Deletion Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickPriceBookEntryScheduleDuration__c</fullName>
        <inlineHelpText>In Minutes</inlineHelpText>
        <label>Click PricebookEntry Schedule Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickUserId__c</fullName>
        <label>ClickUserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Delete_Success_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Click Delete Success Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Click_Deletion_Day__c</fullName>
        <label>Click Deletion Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Click_Endpoint_URL__c</fullName>
        <label>Click Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Integration_Name__c</fullName>
        <label>Click Integration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Password__c</fullName>
        <label>Click Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Performance_Function__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Click Performance Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Click_Product_Batch_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Click Product Batch Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Click_Session_Id_Duration__c</fullName>
        <inlineHelpText>In Minutes</inlineHelpText>
        <label>Click Session Id Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Click_Token_Server__c</fullName>
        <label>Click Token Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Username__c</fullName>
        <label>Click Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Deletion_Day__c</fullName>
        <label>Digital Deletion Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Deletion_Day__c</fullName>
        <label>SAP Deletion Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IntegrationUserAndProfile</label>
</CustomObject>